objects/Shippers__x.object
<CustomObject>
    <description>Shippers</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Shippers</externalName>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>CompanyName</description>
        <externalDeveloperName>CompanyName</externalDeveloperName>
        <label>CompanyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipperID__c</fullName>
        <description>ShipperID</description>
        <externalDeveloperName>ShipperID</externalDeveloperName>
        <label>ShipperID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shippers</label>
    <pluralLabel>Shippers</pluralLabel>
</CustomObject>